# powerbot

./: .devdbrc  .gitignore  BD_SETUP_VERIFICADO.md  CHAT_ID_MANAGER_GUIDE.md  CLEANUP_DATABASE.py  DEPLOY_VPS.md  ITEMS_COMMANDS_GUIDE.md  ITEMS_SYSTEM.md  README.md  SOLUCION_GOOGLE_API.md  VALIDAR_BD_SETUP.py  VALIDATE_NO_DUPLICATES.py  YOUTUBE_API_GUIDE.md  YOUTUBE_LISTENER_GUIDE.md  diagnostico_deps.py  example_youtube_api.py  example_youtube_listener.py  pyproject.toml  quickpush.py  readme.md  requirements.txt  run_bot.py  run_discord_bot.bat  start.py  test_chat_id_manager.py  test_embed_preview.py  test_google_dependencies.py  test_image_loading.py  test_inventory_command.py  test_item_commands.py  test_logout_command.py  test_yapi_command.py
activities/: Jackpot.py  poll.py  screentext.py  spin_wheel.py  text2voice.py
backend/: DISCORD_BOT_INTEGRACION.py  SYNC_README.md  __init__.py  account_linking.py  adminconsole.py  app.py  bootstrap.py  code_manager.py  config.py  database.py  economy.py  economy_youtube.py  init_database.py  install_dependencies.bat  main.py  sync_manager.py  sync_tools.py  transaction_logger.py  usermanager.py  websocket_server.py  youtube_api.py  youtube_cmds_listener.py
backend/console/: __init__.py  commands_general.py  console.py  console_config.py
backend/core/: __init__.py  console_manager.py
backend/data/: bot_config.json  powerbot.db
backend/database/: __init__.py  connection.py  migrate_add_source_column.py  migrate_remove_points.py  migrate_remove_server_points.py
backend/managers/: __init__.py  avatar_manager.py  economy_manager.py  inventory_manager.py  items_cli.py  items_manager.py  user_lookup_manager.py  user_manager.py
backend/services/: __init__.py
data/: active_users.json  codes_config.json  custom_users.json  members.json  moderators.json  pending_links.json  slot_luck.json  transactions_log.json  user_cache.json  user_cache_BACKUP_20260204_171214.json  youtube_points_config.json
discordbot/: __init__.py  __main__.py  commands.py  dcbot.py  requirements.txt  run_APP.bat  store.py
discordbot/data/: blacklist.json  leaderboard_channel.json  log_channel.json  notification_channel.json  pending_links.json  points_config.json  store_config.json
discordbot/sessions/: session_20260101_115703.json  session_20260101_120213.json  session_20260101_151710.json  session_20260101_201655.json  session_20260104_144017.json  session_20260104_180449.json  session_20260104_182815.json  session_20260104_184043.json  session_20260104_184529.json  (+28 more)
fronted/: index.html
keys/: .env.example
(+67 files in other folders)
